# Bfn

./: Cargo.toml  README.md  bfn-6db085f35fee5981.js  bfn-6db085f35fee5981_bg.wasm  index.html
.github/workflows/: yew_deploy.yml
sample/: bitmap_format.json
src/: Bfn.rs  Components.rs  components.rs  main.rs
src/Bfn/: BfnData.rs  BfnParser.rs  Parser.rs
src/Components/: JsonParserComponent.rs
src/bfn/: bfn_parser.rs  bfn_parser_test.rs
src/components/: bfn_parser_component.rs  json_parser_component.rs
