[package]
name = "bfn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }

# あとで別ライブラリに分ける
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
web-sys = "0.3.61"
