[package]
name = "bfn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = "0.3.61"
wasm-bindgen = "0.2"
gloo-file = "0.2.3"

log = "0.4.6"
wasm-logger = "0.2.0"

# あとで別ライブラリに分ける
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
